--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "BookStoreDatabase": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "BookStore",
+        "BooksCollectionName": "Books",
+        "AuthorsCollectionName": "Authors"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
