feat(auth): Implement JWT authentication and authorization

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -5,6 +5,9 @@
         "BooksCollectionName": "Books",
         "AuthorsCollectionName": "Authors"
     },
+    "AppSettings": {
+        "Token": "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean,"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
