--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -1,6 +1,7 @@
 {
     "BookStoreDatabase": {
-        "ConnectionString": "mongodb://localhost:27017",
+        //"ConnectionString": "mongodb://localhost:27017",
+        "ConnectionString": "",//cosmosDb
         "DatabaseName": "BookStore",
         "BooksCollectionName": "Books",
         "AuthorsCollectionName": "Authors"
@@ -16,3 +17,4 @@
     },
     "AllowedHosts": "*"
 }
+
